# OpenGL-fun

./: CMakeLists.txt  README.md  build.sh
include/glad/: glad.h
src/: glad.c  main.cpp  shader.frag  shader.vert
